<resources>
    <string name="app_name">RunLah</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="navigate_to_signup_text">No account? Sign up here!</string>
    <string name="navigate_to_login_text">Have an account? Log in here!</string>
    <string name="today">Today</string>
    <string name="record">Record</string>
    <string name="dashboard">Dashboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="steps">Steps</string>
    <string name="history">History</string>
    <string name="dark_mode_string">isDark</string>
    <string name="delete">Delete</string>
    <string name="today_date">today_date</string>
    <string name="today_day">today_day</string>
    <string name="today_month">today_month</string>
    <string name="today_year">today_year</string>
    <string name="tip">tip</string>
</resources>